[gd_scene load_steps=3 format=3 uid="uid://clcrhxh7hnsu6"]

[ext_resource type="Script" path="res://UI/Configurations.gd" id="1_vjbou"]
[ext_resource type="StyleBox" uid="uid://bd3u6v00qf74u" path="res://UI/ButtonBack.tres" id="2_sv5pn"]

[node name="Configurations" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjbou")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.121569, 0.121569, 1)

[node name="Menu" type="Button" parent="."]
layout_mode = 2
offset_left = 208.0
offset_top = 976.0
offset_right = 266.0
offset_bottom = 999.0
scale = Vector2(3.93676, 4.67428)
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.952941, 0.713726, 0.101961, 1)
theme_override_styles/normal = ExtResource("2_sv5pn")
text = "MENU
"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -1080.0
offset_right = -202.0
offset_bottom = -893.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(9.0359, 4.35625)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/v_separation = 16

[node name="Music" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
